--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Rob Hinds
-twitter_username: rob_hinds
-name: Rob Hinds
+title: Steve Sharpe
+#twitter_username: rob_hinds
+#name: Rob Hinds
 
 # Build settings
 markdown: kramdown
