--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Steve Sharpe
-#twitter_username: rob_hinds
+twitter_username: Steve Sharpe
 #name: Rob Hinds
 
 # Build settings
