--- a/_config.yml
+++ b/_config.yml
@@ -19,26 +19,26 @@ primarylinks:
    url: 
  - title: LinkedIn
    url: https://www.linkedin.com/in/steven-sharpe-303
- - title: Food
-   url: https://www.robbishfood.com/
+ #- title: Food
+ #  url: https://www.robbishfood.com/
 
 #Any buzzword skills you want to include
 skills:
- - Security
- - Akka-http
- - Microservices
- - Slick
- - Product management
- - API design
- - Groovy
- - Spring MVC/Boot/Social
- - Gradle
- - Java
- - JPA
- - SQL
- - REST
- - Technical Architecture
- - Machine learning
+ - Mitre ATT&CK
+ - Diamond Model
+ - Cyber Kill Chain
+ - AWS
+ - SIEM
+ - SysInternals
+ - Splunk
+ - Wireshark
+ - Nmap
+ - Metasploit
+ - Yara
+ - OpenVAS
+ - Python
+ - Linux
+ - Security Onion
 
 #Blogfeed is optional - including this will add JS to call the feed and populate blog list
 blogfeed: https://automateddeveloper.blogspot.com/feeds/posts/default?alt=json
