--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,9 @@ skills:
 
 #Work experience is required
 roles:
- - title: Networked Technologies Engineer
+ - title: Networked
+        Technologies
+          Engineer
    start: 2013
    end: 20202
    employer: Self Employed
